<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.upload.UploadActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_upload"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="New Story"
        app:navigationIcon="@drawable/ic_clear"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_check"
            tools:layout_editor_absoluteX="371dp"
            tools:layout_editor_absoluteY="16dp"
            android:contentDescription="@string/desc_button_upload" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_upload"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/desc_image_story" />

    <EditText
        android:id="@+id/tv_upload_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:maxLines="3"
        android:gravity="start"
        android:hint="@string/hint_desc_upload_story"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_preview"
        app:layout_constraintTop_toTopOf="@id/iv_preview"
        android:inputType="text"
        android:autofillHints="" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ui_share_my_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/switch_add_location" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>