<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_dicoding"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:src="@drawable/logo_dicoding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc_profile_picture" />

    <TextView
        android:id="@+id/tv_list_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="ferdifir"
        android:textColor="@color/black"
        android:transitionName="name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_list_location"
        app:layout_constraintEnd_toStartOf="@id/btn_menu"
        app:layout_constraintTop_toTopOf="@id/img_dicoding"
        app:layout_constraintStart_toEndOf="@id/img_dicoding" />

    <TextView
        android:id="@+id/tv_list_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:maxLines="1"
        tools:text="Jl. Gn. Agung III"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/btn_menu"
        app:layout_constraintBottom_toBottomOf="@id/img_dicoding"
        app:layout_constraintStart_toEndOf="@id/img_dicoding"
        app:layout_constraintTop_toBottomOf="@id/tv_list_username"/>

    <ImageView
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_more_vert"
        app:layout_constraintBottom_toBottomOf="@id/tv_list_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_list_username"
        android:contentDescription="@string/desc_button_decoration" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="image"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/img_dicoding">
        <ImageView
            android:id="@+id/iv_list_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_dicoding"
            android:maxHeight="300dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_image_story" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/story_upload_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="italic"
        android:transitionName="story_upload_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        tools:text="diupload beberapa waktu lalu" />
</androidx.constraintlayout.widget.ConstraintLayout>