<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Detail Story"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent">
            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_favorite_border"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc_button_decoration" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/toolbar_detail"/>
        <ImageView
            android:id="@+id/img_dicoding"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:src="@drawable/logo_dicoding"
            app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/desc_profile_picture" />

        <TextView
            android:id="@+id/tv_list_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="ferdifir"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:transitionName="name"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@id/tv_list_location"
            app:layout_constraintEnd_toStartOf="@id/btn_menu"
            app:layout_constraintTop_toTopOf="@id/img_dicoding"
            app:layout_constraintStart_toEndOf="@id/img_dicoding" />

        <TextView
            android:id="@+id/tv_list_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            tools:text="Jl. Gn. Agung III"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/btn_menu"
            app:layout_constraintStart_toEndOf="@id/img_dicoding"
            app:layout_constraintTop_toBottomOf="@id/tv_list_username"/>

        <ImageView
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_more_vert"
            app:layout_constraintBottom_toBottomOf="@id/tv_list_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_list_username"
            android:contentDescription="@string/desc_button_decoration" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:transitionName="image"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_list_location">
            <ImageView
                android:id="@+id/iv_list_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_dicoding"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_image_story" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cardview"
            tools:text="@tools:sample/lorem/random"/>

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_desc"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Uploaded at 30 April 2022 12:34:00"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>